Fix position of rule number on smaller screens

--- a/src/subtitulamos/resources/assets/css/rules.scss
+++ b/src/subtitulamos/resources/assets/css/rules.scss
@@ -165,10 +165,6 @@ kbd {
     & > li {
       padding: var(--spacing-s) var(--spacing-xs);
       padding-left: calc(var(--badge-size) + var(--spacing-m));
-
-      &::before {
-        top: var(--spacing-m);
-      }
     }
   }
 }
